--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <dialog id="favDialog">
             <form action="">
                 <div class="container">
-                    <h2>Login Form</h2>
+                    <h2>Add book:</h2>
 
                     <div class="inputs">
                         <label for="title"><b>title: </b></label>
@@ -26,7 +26,7 @@
                         <label for="pages"><b>pages: </b></label>
                         <input type="number" name="pages" required>
                         <label for="read"><b>read:</b></label>
-                        <input id="readed" type="checkbox" name="read">
+                        <input id="read" type="checkbox" name="read">
                     </div>
                 </div>
                 <div>
