Write a function that will render board
Created a function that render board with selected cells by players.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
 <body>
 
+    <div class="container">
+        <div class="setting"></div>
+        <div class="board"></div>
+    </div>
 
 </body>
 
