Write code that handles click display
Create code that manage displaying current mark on display in right way.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 <body>
 
     <div class="container">
-        <div class="setting"></div>
         <div class="board"></div>
+        <div class="setting">
+            <h1>Player One</h1>
+            <h2>◯</h2>
+            <h1>Player Two</h1>
+            <h2>X</h2>
+        </div>
+        <div>Active Player
+            <h1 id="active"></h1>
+        </div>
     </div>
 
 </body>
