--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tic Tac Toe</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 </head>
 
 <body>
@@ -33,25 +34,29 @@
 
         <div class="board"></div>
         <div class="buttons">
-            <button id="restartBtn">Restart</button>
-            <button id="renameBtn">Rename</button>
+            <button id="restartBtn" class="controller">Restart</button>
+            <button id="renameBtn" class="controller">Rename</button>
         </div>
     </div>
 
     <div>
         <dialog id="favDialog">
-            <div class="container">
-                <h2>Input Names:</h2>
+            <div class="favContainer">
+                <!-- <h2>Input Names:</h2> -->
 
                 <div class="inputs">
-                    <label for="playerOne"><b>Player One: </b></label>
-                    <input type="text" name="playerOne">
-                    <label for="playerTwo"><b>Player Two: </b></label>
-                    <input type="text" name="playerTwo">
+                    <div>
+                        <label for="playerOne"><b>Player One: </b></label>
+                        <input type="text" name="playerOne">
+                    </div>
+                    <div>
+                        <label for="playerTwo"><b>Player Two: </b></label>
+                        <input type="text" name="playerTwo">
+                    </div>
                 </div>
             </div>
             <div>
-                <button id="startBtn" value="true">Start</button>
+                <button id="startBtn" class="controller" value="true">Start</button>
             </div>
         </dialog>
     </div>
