Add logic to start button and reset button
Added logic to start button. Names are assigned to right players and showed on main screen.
Reset button clear board and set active player to player one. Names are the same as before.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 
         <div class="players">
             <div>
-                <h1>Player One</h1>
-                <h2>◯</h2>
+                <h1 id="p1Name">Player One</h1>
+                <h2 class="cell">◯</h2>
             </div>
+            <div></div>
             <div>
-                <h1>Player Two</h1>
-                <h2>X</h2>
+                <h1 id="p2Name">Player Two</h1>
+                <h2 class="cell">X</h2>
             </div>
         </div>
 
