Manage draws and display score
Score is displayed. Reset button set score to 0. Rename dialog is opening but not changes names.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <div class="active">
             <h2>Active Player</h2>
             <h1 id="activePlayer"></h1>
+            <div>
+                <h1 id="score">....</h1>
+            </div>
         </div>
 
         <div class="players">
@@ -38,6 +41,7 @@
             <button id="restartBtn" class="controller">Restart</button>
             <button id="renameBtn" class="controller">Rename</button>
         </div>
+        <div class="winner"></div>
     </div>
 
     <div>
@@ -61,6 +65,23 @@
             </div>
         </dialog>
     </div>
+
+    <dialog id="renameDialog">
+        <div class="inputs">
+            <div>
+                <label for="playerOne"><b>Player One: </b></label>
+                <input type="text" name="playerOne">
+            </div>
+            <div>
+                <label for="playerTwo"><b>Player Two: </b></label>
+                <input type="text" name="playerTwo">
+            </div>
+        </div>
+        <div>
+            <button id="renameDBtn" class="controller">Rename</button>
+            <button id="cancelRenameDBtn" class="controller">Cancel</button>
+        </div>
+    </dialog>
 
 </body>
 
